deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: wisecow-k
    app.kubernetes.io/instance: wisecow-k-ng-1-Node
    app.kubernetes.io/managed-by: kubectl
  name: wisecow-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow-d
  template:
    metadata:
      labels:
        app: wisecow-d
    spec:
      containers:
      - name: wisecow-d
        image: kartikeya532001/wisecow:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4499
