service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-s
spec:
  selector:
    app: wisecow-d
  ports:
  - protocol: TCP
    port: 443
    targetPort: 4499
  type: LoadBalancer
