ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-i
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: wisecow.shop  # Replace with your Load Balancer URL
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-s
            port:
              number: 4499  # Update to your application port
  tls:
  - hosts:
    - wisecow.shop  # Replace with your Load Balancer URL
